Add additional util fields
